CMBSandbox4/src/objects/Estimates__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Via__c</fullName>
        <label>Approved Via</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No need</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <inlineHelpText>Date Sent to Client</inlineHelpText>
        <label>Estimate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <formula>Opportunity__r.Hourly_Rate__c *  Estimates_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Hrs_Developer__c</fullName>
        <label>Estimated Hrs(Developer)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimates_Hours__c</fullName>
        <label>Estimate Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimates_Timeframe__c</fullName>
        <label>Estimates Timeframe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harvest_Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projects</label>
        <referenceTo>HarvestProject__c</referenceTo>
        <relationshipLabel>Estimates</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Include_in_Rollup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked then only estimate hours will be calculate for related projects</description>
        <label>Include in Rollup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Estimates</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Estimates</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The related RFE</inlineHelpText>
        <label>RFE</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RequestforEstimate__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RequestforEstimate__c</referenceTo>
        <relationshipLabel>Estimates</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOW_Status__c</fullName>
        <label>SOW Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Need</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open - Not Sent Yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Rejected by Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - No Response from Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Re-Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Sent &amp; Pending Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - By Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Internally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved - Internal Non-Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved &amp; Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_SOW_Hours__c</fullName>
        <label>Total SOW Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Estimate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Estimates_Hours__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Status__c</columns>
        <columns>SOW_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Estimates_Hours__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Status__c</columns>
        <columns>SOW_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved - By Client,Approved - Internally</value>
        </filters>
        <label>Approved</label>
    </listViews>
    <listViews>
        <fullName>Open_All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Estimates_Hours__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Status__c</columns>
        <columns>SOW_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed - Rejected by Client,Closed - No Response from Client,Approved</value>
        </filters>
        <label>Open - All</label>
    </listViews>
    <listViews>
        <fullName>Sent_Pending_Response</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Estimates_Hours__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Status__c</columns>
        <columns>SOW_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open - Sent &amp; Pending Response</value>
        </filters>
        <label>Open - Sent &amp; Pending Response</label>
    </listViews>
    <nameField>
        <label>Estimate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>